Add some tests